Fix wrong position list in contract profile in Safari

--- a/public/stylesheets/general.styl
+++ b/public/stylesheets/general.styl
@@ -3036,6 +3036,9 @@ button
 .filters-link-sm
   display none
 
+.party_flags_recommendations_list
+  display inline-block
+
 
 @-webkit-keyframes fadeIn {
     from { opacity: 0; }
